--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="bloc__cartes__restaurants">
 
                 <div class="cartes__restaurants">
-                    <a href="#link">
+                    <a href="./la_palette_du_gout.html">
                         <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
                         <div class="cartes__restaurants__id">
                             <h3>La palette du goût</h3>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="cartes__restaurants">
-                    <a href="#link">
+                    <a href="./la_note_enchantee.html">
                         <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
                         <div class="cartes__restaurants__id">
                             <h3>La note enchantée</h3>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="cartes__restaurants">
-                    <a href="#link">
+                    <a href="./la_delice_des_sens.html">
                         <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                         <div class="cartes__restaurants__id">
                             <h3>Le délice des sens</h3>
