--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -38,7 +38,7 @@
         
 <!--Section entrées-->
 
-<section class="menu__entrees">
+<section class="entrees">
         <h3>Entrées</h3>
         
         <div class="menu__item">
