Insertion des alt et titles pour les images

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -26,7 +26,7 @@
 <main>
 
     <div class="menu__image">
-        <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+        <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française"> 
     </div>
 
 
