--- a/la_delice_des_sens.html
+++ b/la_delice_des_sens.html
@@ -26,7 +26,7 @@
 <main>
 
     <div class="menu__image">
-        <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+        <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens">
     </div>
 
 
