--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
 
                 <div class="cartes__restaurants">
                     <a href="./la_palette_du_gout.html">
-                        <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                        <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" title="La palette du goût">
                         <div class="cartes__restaurants__id">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                             <i class="far fa-heart"></i>
-                            <div class="nouveau">Nouveau</div>
                         </div>
                         
                     </a>
@@ -69,19 +68,18 @@
 
                 <div class="cartes__restaurants">
                     <a href="./la_note_enchantee.html">
-                        <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                        <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée">
                         <div class="cartes__restaurants__id">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                             <i class="far fa-heart"></i>
                         </div>
-                        <div class="nouveau">Nouveau</div>
                     </a>
                 </div>
 
                 <div class="cartes__restaurants">
                     <a href="./a_la_francaise.html">
-                        <img src="./img/restaurants//toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                        <img src="./img/restaurants//toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française">
                         <div class="cartes__restaurants__id">
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
@@ -92,7 +90,7 @@
 
                 <div class="cartes__restaurants">
                     <a href="./la_delice_des_sens.html">
-                        <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                        <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens">
                         <div class="cartes__restaurants__id">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
