--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -26,7 +26,7 @@
 <main>
 
     <div class="menu__image">
-        <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+        <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée">
     </div>
 
 
