--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -26,7 +26,7 @@
 <main>
 
     <div class="menu__image">
-        <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" title="La palette du goût">
     </div>
 
 
