Ajustements design pages menu

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -28,15 +28,14 @@
     <div class="menu__image">
         <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française"> 
     </div>
-
-
-<div class="menu__container">
     
     <div class="menu__title">
         <h2>À la française</h2>
         <i class="far fa-heart"></i>
     </div>
-        
+
+<div class="menu__container">
+
 <!--Section entrées-->
 
 <section class="entrees">
@@ -139,6 +138,8 @@
         </div>
 
 </section>
+
+</div>
   
     <div class="btn__commander">
         <button class="btn">Commander</button>
