--- a/la_delice_des_sens.html
+++ b/la_delice_des_sens.html
@@ -28,14 +28,13 @@
     <div class="menu__image">
         <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens">
     </div>
-
-
-<div class="menu__container">
     
     <div class="menu__title">
         <h2>Le délice des sens</h2>
         <i class="far fa-heart"></i>
     </div>
+
+<div class="menu__container">
         
 <!--Section entrées-->
 
@@ -139,6 +138,8 @@
         </div>
 
 </section>
+
+</div>
   
     <div class="btn__commander">
         <button class="btn">Commander</button>
