--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -17,9 +17,9 @@
 <body>
 
 <div class="loader">
-    <div class="loader__rotative"></div>
-    <div class="loader__rotative_small"></div>
-    <div class="fas fa-utensils"></div>
+        <div class="loader__rotative"></div>
+        <div class="loader__rotative_small"></div>
+        <div class="fas fa-utensils"></div>
 </div>
 
 <header>
