--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <body>
 
 <div class="loader">
+    <div class="container__loader">
         <div class="loader__rotative"></div>
         <div class="loader__rotative_small"></div>
         <div class="fas fa-utensils"></div>
+    </div>
 </div>
 
 <header>
