Ajout animation cœur cartes

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -31,7 +31,7 @@
     
     <div class="menu__title">
         <h2>À la française</h2>
-        <i class="far fa-heart"></i>
+        <i class="far fa-heart"><i class="fas fa-heart"></i></i>
     </div>
 
 <div class="menu__container">
@@ -105,6 +105,7 @@
 
     </section>
 
+<!--Section Desserts-->
 
 <section class="desserts">
 
@@ -146,7 +147,6 @@
     </div>
 
 </main>
-
 
 <footer>
     <h2>ohmyfood</h2>
