--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -32,7 +32,7 @@
     
     <div class="menu__title">
         <h2>La note enchantée</h2>
-        <i class="far fa-heart"></i>
+        <i class="far fa-heart"><i class="fas fa-heart"></i></i>
     </div>
 
 <div class="menu__container">
