--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -31,7 +31,7 @@
     
     <div class="menu__title">
         <h2>La palette du goût</h2>
-        <i class="far fa-heart"></i>
+        <i class="far fa-heart"><i class="fas fa-heart"></i></i>
     </div>
 
 <div class="menu__container">
