Ajout information meta sur les pages des restaurants

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <title>Ohmyfood</title>
-    <meta name="description" content="Ohmyfood">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    
+    <title>Ohmyfood - La note enchantée</title>
+    <meta name="description" content="Ohmyfood, site de réservations des restaurants en ligne">
+    <meta name="keywords" content="restaurants, réservations, menu">
 </head>
 
 <body>
