Div à la place de la section location

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <h1 class="nom">ohmyfood</h1>
 
-    <section class="location">
+    <div class="location">
         <i class="fas fa-map-marker-alt"></i>
         <p>Paris, Beleville</p>
-    </section>
+    </div>
 
     <section class="reserver_menu">
         <h2>Réservez le menu qui vous convient</h2>
